--- a/TODO
+++ b/TODO
@@ -1,3 +1,1 @@
-1. paste operation.
-2. compact utils directory, separate it into different packages.
-3. undo operation.
+[ ] compact utils directory, separate it into different packages.
