fix: 修改go-lib源码包名
修改go-lib源码包名为golang-github-linuxdeepin-go-lib

Log:
Task: https://pms.uniontech.com/zentao/task-view-79863.html
Influence: no
Change-Id: Ic76694f300f97dcbb05e1b84323f98d3bbc402d4

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-github-linuxdeepin-go-lib (0.5.0-1) unstable; urgency=medium
+
+  * change package name to golang-github-linuxdeepin-go-lib
+
+ -- weizhixiang <weizhixiang@uniontech.com>  Tue, 30 Nov 2021 19:39:58 +0800
+
 go-dlib (0.4.11-1) unstable; urgency=low
 
   * Autobuild Tag 0.4.11 
