--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-github-linuxdeepin-go-lib (6.0.0.0) unstable; urgency=medium
+
+  * snipe version
+
+ -- Tan Feng <tanfeng@uniontech.com>  Fri, 10 Jun 2022 22:01:25 +0800
+
 golang-github-linuxdeepin-go-lib (0.5.0-1) unstable; urgency=medium
 
   * change package name to golang-github-linuxdeepin-go-lib
