--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+golang-github-linuxdeepin-go-lib (6.0.1) unstable; urgency=medium
+
+  [ TagBuilder ]
+  * fix: 关机音效文件更新后采用24bit导致无法播放(Bug: 144437)(Influence: 关机音效)
+
+ -- caixiangrong <caixiangrong@uniontech.com>  Mon, 25 Jul 2022 13:18:52 +0800
+
 golang-github-linuxdeepin-go-lib (6.0.0.0) unstable; urgency=medium
 
   * snipe version
