--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+golang-github-linuxdeepin-go-lib (6.0.10) unstable; urgency=medium
+
+  * feat: procfs增加TrustedExe方法 (#109)
+  * fix(debian):  libgdk-pixbuf2.0-dev -> libgdk-pixbuf-2.0-dev on
+    debian sid
+  * fix(debian): homepage metadata
+
+ -- zhangkun <zhangkun2@uniontech.com>  Thu, 10 Jul 2025 21:19:05 +0800
+
 golang-github-linuxdeepin-go-lib (6.0.9) unstable; urgency=medium
 
   * feat: 修改单声道pa设置的值 (#105)
